feat: creating archtecture

--- a/Uol Scraping.ipynb
+++ b/Uol Scraping.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Usando Selenium"
+    "### Using Selenium"
    ]
   },
   {
@@ -1311,7 +1311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Teste com propostas"
+    "### Test with proposals"
    ]
   },
   {
@@ -1479,7 +1479,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Extraindo textos originais"
+    "### Extracting original texts"
    ]
   },
   {
@@ -2563,7 +2563,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Textos sem erros"
+    "### Error-free texts"
    ]
   },
   {
